fixing results and show count overlapping

--- a/src/app/components/search-results/search-results.component.scss
+++ b/src/app/components/search-results/search-results.component.scss
@@ -32,12 +32,9 @@
 }
 
 .results__count {
-  position: absolute;
   color: $grayDark;
   font-size: 1.6rem;
   font-weight: 700;
-  top: -7px;
-  left: 50%;
   transform: translateX(-50%);
   @media only screen and (max-width: 600px) {
     display: block;
@@ -48,7 +45,9 @@
     top: 0;
   }
 }
-
+.results__show-count{
+  align-content: center;
+}
 .results__show-count-link {
   font-size: 1.2rem;
   font-weight: 100;
